--- a/apihub-root/wallet/web-components/document/modals/comment-modal/comment-modal.css
+++ b/apihub-root/wallet/web-components/document/modals/comment-modal/comment-modal.css
@@ -7,5 +7,5 @@ comment-modal {
     resize: none;
     outline: none;
     height: 250px;
-    margin-bottom: 20px;
+    margin-bottom: 55px;
 }
