--- a/apihub-root/wallet/web-components/document/modals/document-variable-details/document-variable-details.css
+++ b/apihub-root/wallet/web-components/document/modals/document-variable-details/document-variable-details.css
@@ -1,7 +1,6 @@
 document-variable-details{
     display: block;
     width: 1100px;
-    height: 600px;
 }
 document-variable-details textarea{
     resize: none;
