--- a/apihub-root/wallet/web-components/space-application/modals/add-space-modal/add-space-modal.css
+++ b/apihub-root/wallet/web-components/space-application/modals/add-space-modal/add-space-modal.css
@@ -4,5 +4,5 @@ add-space-modal{
 }
 
 add-space-modal .modal-footer{
-    margin-top: 20px;
+    margin-top: 55px;
 }
